# agentstage

./: README.md
adrs/: [000] template.md  [001] use-react.md  [002] use-python.md  [003] use-shadcn.md  [004] use-sqlite.md
apps/backend/: .env.example  .gitignore  README.md  pyproject.toml
apps/backend/src/: log.py  main.py  settings.py
apps/backend/src/api/: dependencies.py  server.py
apps/backend/src/api/routes/: __init__.py  example.py  videos.py
apps/backend/src/db/: base.py  database.py
apps/backend/src/db/models/: example.py  videos.py
apps/backend/src/models/: videos.py
apps/backend/src/repositories/: video_repository.py
apps/backend/src/schemas/: example.py  videos.py
apps/backend/src/services/: example_service.py  video_service.py
apps/docs/: README.md
apps/frontend/: components.json  package-lock.json  package.json
apps/frontend/api/: video.ts
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/dashboard/: globals.css  page.tsx
apps/frontend/app/new-project/: page.tsx
apps/frontend/app/new-project/videos/: page.tsx
apps/frontend/app/projects/: page.tsx
apps/frontend/components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx  project-sidebar.tsx  team-switcher.tsx
apps/frontend/components/ui/: breadcrumb.tsx  dropdown-menu.tsx  sheet.tsx  sidebar.tsx
apps/ui/: README.md
misc/: architecture.mermaid  pipeline.mermaid
